--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,12 @@
     }
   },
   "rules": {
+    "react/display-name": [
+      0
+    ],
+    "react/prop-types": [
+      0
+    ],
     "prettier/prettier": [
       "error",
       {
