--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel ./src/index.html",
+    "build": "webpack --config ./webpack.config.js --mode production",
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "test": "jest ./src",
     "lint": "eslint ./src"
   },
@@ -19,6 +20,11 @@
   },
   "homepage": "https://github.com/Kevnz/daily#readme",
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.0",
     "eslint": "^5.7.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-config-standard": "^12.0.0",
@@ -30,9 +36,14 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-sonarjs": "^0.2.0",
     "eslint-plugin-standard": "^4.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
-    "parcel-bundler": "^1.10.3",
-    "prettier": "^1.14.3"
+    "prettier": "^1.14.3",
+    "react-hot-loader": "^4.3.11",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "mini.css": "^3.0.0",
