--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Kevnz/daily#readme",
   "devDependencies": {
+    "delay": "^4.1.0",
     "eslint": "^5.7.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-config-standard": "^12.0.0",
@@ -30,5 +31,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "jest": "^23.6.0",
     "prettier": "^1.14.3"
+  },
+  "dependencies": {
+    "back-off": "^2.1.0"
   }
 }
