--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,88 +1,7 @@
 {
   "extends": [
-    "standard",
-    "prettier",
-    "plugin:sonarjs/recommended"
+    "@kev_nz"
   ],
-  "plugins": [
-    "import",
-    "no-only-tests",
-    "prettier",
-    "sonarjs"
-  ],
-  "settings": {
-    "import/resolver": {
-      "node": {
-        "extensions": [
-          ".js",
-          ".jsx"
-        ]
-      }
-    }
-  },
-  "rules": {
-    "prettier/prettier": [
-      "error",
-      {
-        "printWidth": 80,
-        "tabWidth": 2,
-        "useTabs": false,
-        "semi": false,
-        "singleQuote": true,
-        "trailingComma": "es5",
-        "bracketSpacing": true,
-        "jsxBracketSameLine": false,
-        "arrowParens": "avoid"
-      }
-    ],
-    "import/no-unresolved": 2,
-    "import/order": [
-      "error",
-      {
-        "groups": [
-          "builtin",
-          "external",
-          "internal",
-          "parent",
-          "sibling",
-          "index"
-        ]
-      }
-    ],
-    "import/first": [
-      2,
-      "absolute-first"
-    ],
-    "no-only-tests/no-only-tests": 2,
-    "standard/computed-property-even-spacing": 0,
-    "comma-dangle": [
-      "error",
-      {
-        "arrays": "always-multiline",
-        "objects": "always-multiline",
-        "imports": "always-multiline",
-        "exports": "always-multiline",
-        "functions": "never"
-      }
-    ],
-    "no-console": [
-      1,
-      {
-        "allow": [
-          "info",
-          "warn",
-          "error"
-        ]
-      }
-    ],
-    "arrow-body-style": [
-      0,
-      "as-needed"
-    ],
-    "no-param-reassign": [
-      0
-    ]
-  },
   "env": {
     "browser": false,
     "jest": true,
